[package]
name = "io-process"
description = "I/O-free process client library"
version = "0.0.2"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "os"]
keywords = ["io-free", "coroutine", "runtime", "process", "command"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-process/latest/io_process"
repository = "https://github.com/pimalaya/io-process"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
expand = ["dep:dirs", "dep:shellexpand"]
serde = ["dep:serde"]
std = []
tokio = ["dep:tokio"]

[[example]]
name = "std_spawn"
required-features = ["std"]

[[example]]
name = "std_spawn_out"
required-features = ["std"]

[[example]]
name = "std_spawn_in"
required-features = ["std"]

[[example]]
name = "std_spawn_pipeline"
required-features = ["std"]

[[example]]
name = "std_expand"
required-features = ["expand"]

[[example]]
name = "tokio_spawn"
required-features = ["tokio"]

[[example]]
name = "tokio_spawn_out"
required-features = ["tokio"]

[[example]]
name = "tokio_spawn_pipeline"
required-features = ["tokio"]

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.20"
tokio = { version = "1", features = ["full"] }

[dependencies]
dirs = { version = "6", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
shellexpand = { version = "3.1", default-features = false, features = ["base-0", "tilde"], optional = true }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["io-util", "process"], optional = true }
